--- a/first/index.css
+++ b/first/index.css
@@ -1,26 +1,26 @@
 body {
   margin: 0;
-  background-color: #e6e3e3;
+  background-color: #eceaea;
   width: 100%;
   height: 100vh;
 }
 
 .header {
   width: 100%;
-  height: 20vh;
-  background-color: #4e4e4e;
+  height: 15vh;
+  background-color: #5a5959;
 }
 
 .main-content {
   background-color: #fbf6f6;
   margin: 0 auto;
-  width: 75%;
-  height: 70vh;
+  width: 80%;
+  height: 78vh;
 }
 
 .footer { 
   background-color: #131212;
   margin: 0 auto;
-  width: 75%;
-  height: 10vh;
+  width: 80%;
+  height: 20vh;
 }
