--- a/second/index.css
+++ b/second/index.css
@@ -14,21 +14,21 @@ body {
 .square-one {
   height: 150px;
   width: 50px;
-  background-color: blueviolet;
+  background-color: rgb(146, 61, 226);
   display: inline-block;
 }
 .square-two {
   height: 200px;
   width: 400px;
   display: inline-block;
-  background-color: forestgreen;
+  background-color: rgb(11, 175, 11);
   margin: 0 50px;
 }
 .circle-one {
   height: 200px;
   width: 200px;
   border-radius: 50%;
-  background-color: skyblue;
+  background-color: rgb(157, 219, 243);
   display: inline-block;
 }
 
@@ -43,7 +43,7 @@ body {
 .box-shadow {
   width: 100%;
   height: 200px;
-  background-color: lemonchiffon;
+  background-color: rgb(248, 243, 182);
   -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
   -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
   box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
@@ -53,7 +53,7 @@ body {
   width: 50%;
   border: 1px solid #ccc;
   background-color: white;
-  padding: 100px;
+  padding: 275px;
   box-sizing: border-box ;
   margin: 25px auto; 
   -webkit-box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.25);
