--- a/third/index.css
+++ b/third/index.css
@@ -20,29 +20,37 @@ body, html {
 }
 
 .row-1-div {
-  width: 50px;
-  height: 50px;
+  width: 68px;
+  height: 68px;
   background-color: #4A90E2;
 }
 
 .row-2 {
   background-color: #fff;
   box-sizing: border-box;
-  padding: 50px;
+  padding: 55px;
 }
 
 .row-3 {
   background-color: #4A90E2;
+  height: 145px;
+  width: 100%;
 }
 
 .row-4 {
   background-color: #50E3C2;
+  height: 145px;
+  width: 100%;
 }
 
 .row-5 {
   background-color: #B8E986;
+  height: 145px;
+  width: 100%;
 }
 
 .row-6 {
   background-color: #F8E71C;
+  height: 145px;
+  width: 100%;
 }
